# kernel

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  i686-elf.cmake  kernel.c  start.s  x86_64-elf.cmake
common/: common.h
display/: vga.c  vga.h
isodir/boot/: kernel.elf
isodir/boot/grub/: grub.cfg
serial/: serial-debugging.c  serial-debugging.h  serial.c  serial.h
src/: CMakeLists.txt  debug.rs  kernel.c  lib.rs
src/arch/x86_64/: linker.ld  long_mode_init.asm  start.asm
src/common/: common.h
src/display/: vga.c  vga.h
src/io/: mod.rs  port_io.rs  serial.rs  vga_buffer.rs
src/memory/: mod.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
src/serial/: serial-debugging.c  serial-debugging.h  serial.c  serial.h
